16987
{code}
 ~/code/scala ./build/quick/bin/scala Welcome to Scala version 2.10.0-20120505-103711-7cac6334d4 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_29).

scala> arrayTag[Array[Int]]
res4: ArrayTag[Array[Int]] = ClassTag[class [I]

scala> type AI=Array[Int]; arrayTag[AI]
<console>:9: error: No ArrayTag available for AI
        arrayTag[AI]
                ^
{code}

Original report:

http://stackoverflow.com/questions/10488007/toarray-in-scala-2-10-milestone


By contrast, this works:
{code}

scala> type I=Int; arrayTag[I]
defined type alias I
res6: ArrayTag[I] = ClassTag[int]
{code}
